added toggle btn

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         </li>
     </div>
 
-
+    <label class="switch">
+        <input id= "dark-mode-toggle" type="checkbox" checked>
+        <span class="slider round"></span>
+      </label>
 
     <div class="container">
         <div class="screen">
